@@ -1,5 +1,6 @@
 Revision history for Data::Validation
 
+          - Added filterUCFirst and filterTitleCase
           - Fixed bug in validating non mandatory fields
           - Added or option to constraints
           - Dropped dependency on Regexp::Common
